feat: 邮件推广初步
